# whisper-cms

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  chore.md  feature.md
core/whisper-cms-core/: Cargo.toml
crates/actors/: Cargo.toml
crates/actors/src/: install.rs  lib.rs  telemetry.rs
crates/adapt/: Cargo.toml
crates/adapt/src/: cli.rs  cmd.rs  db.rs  filter.rs  fm.rs  lib.rs  plugin.rs  upsert.rs
crates/adapt/src/core/: content.rs  context.rs  error.rs  mod.rs  recommendation.rs
crates/adapt/src/http/: app.rs  error.rs  middleware.rs  mod.rs  plugin.rs  plugin_middleware.rs  resolver.rs  theme.rs
crates/adapt/src/js/: engine.rs  error.rs  mod.rs  value.rs
crates/adapt/src/mql/: ast.rs  error.rs  eval.rs  index.rs  mod.rs  parser.rs  query.rs
crates/adapt/src/mql/store/: json.rs  mem.rs  mod.rs
crates/adapt/src/render/: body_regex.rs  error.rs  html_rewriter.rs  mod.rs  pipeline.rs  template.rs
crates/adapt/src/runtime/: bootstrap.rs  bridge.rs  ctx_bridge.rs  discovery.rs  error.rs  mod.rs  plugin.rs  plugin_actor.rs  theme.rs  theme_actor.rs
crates/app/: Cargo.toml
crates/app/src/: boot.rs  main.rs  phase.rs  router.rs  serving.rs  state.rs
crates/app/src/install/: actions.rs  mod.rs  plan.rs  probe.rs  progress.rs  routes.rs  session.rs  steps.rs
crates/app/src/middleware/: maint.rs  mod.rs  session.rs  throttle.rs
crates/app/templates/layout/: base.html
crates/app/templates/page/: install_config.html  install_done.html  install_run.html  install_welcome.html
crates/app/templates/partial/: _errors.html
crates/core/: Cargo.toml
crates/core/src/: types.rs
crates/core/src/config/: mod.rs
crates/core/src/security/: mod.rs  password.rs  secrets.rs
crates/core/src/validate/: site.rs
crates/domain/: Cargo.toml
crates/domain/src/: content.rs  doc.rs  file.rs  lib.rs  react.rs  setting.rs  stream.rs
crates/domain/src/config/: admin.rs  core.rs
crates/domain/src/reactive/: builder.rs  mod.rs  queue.rs
crates/domain/src/security/: mod.rs  password.rs  secrets.rs
crates/domain/src/validate/: install.rs  mod.rs  site.rs
crates/edge/: Cargo.toml
crates/edge/src/: cli.rs  cmd.rs  error.rs  lib.rs  main.rs  proxy.rs  router.rs
crates/edge/src/db/: adapter.rs  json.rs  mem.rs  mod.rs  port.rs  resolver.rs  sqlite.rs  tantivy.rs
crates/edge/src/fs/: adapter.rs  doc.rs  ext.rs  filter.rs  index.rs  mod.rs  scan.rs  watch.rs
crates/infra/: Cargo.toml
crates/infra/migrations/ops/: 0001_init.sql
crates/infra/src/: lib.rs
crates/infra/src/config/: io.rs  mod.rs  paths.rs
crates/infra/src/db/: conn.rs  health.rs  migrate.rs  mod.rs  pool.rs  seed.rs
crates/infra/src/db/ops/: connect.rs  migrate.rs  mod.rs  seed.rs
crates/infra/src/db/ops/migrations/: 0001_users.sql  0002_site.sql
crates/infra/src/install/: resume.rs
crates/kit/: Cargo.toml
crates/kit/src/: lib.rs
crates/operator/: Cargo.toml
crates/operator/config/: admin.toml  core.toml
crates/operator/data/: ops.db
crates/operator/src/: actions.rs  auth.rs  errors.rs  forms.rs  gui.rs  lib.rs  main.rs  phase.rs  progress.rs  routes.rs  state.rs  steps.rs
crates/operator/templates/component/: progress_row.html
crates/operator/templates/layout/: base.html
crates/operator/templates/page/: install_config.html  install_db.html  install_done.html  install_lang.html  install_run.html  install_site.html  install_welcome.html  maint.html
crates/operator/tests/: install_flow.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  home.rs  lib.rs  router.rs  state.rs
crates/serve/: Cargo.toml
crates/serve/src/: context.rs  ctx.rs  db.rs  file.rs  filter.rs  fm.rs  indexer.rs  lib.rs  resolver.rs  start.rs  task.rs
crates/serve/src/ctx/: http.rs
crates/serve/src/render/: body.rs  body_regex.rs  http.rs  mod.rs  pipeline.rs  recommendation.rs  rewriter.rs  template.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/whisper-cms-core/: Cargo.toml  config.enc
crates/whisper-cms-core/config-app/: index.html
crates/whisper-cms-core/src/: actors.rs  args.rs  cli.rs  main.rs  request.rs  settings.rs  startup.rs  ui.rs
crates/whisper-cms-core/src/actors/: config.rs  request.rs
crates/whisper-cms-core/src/actors/request/: handler.rs
crates/whisper-cms-core/src/request/: handler.rs
crates/whisper-cms-core/src/startup/: config.rs  db.rs  settings.rs
crates/whisper-cms-core/templates/: base.html  configure.html  configure_full.html  db_config.html  home.html
crates/whisper-cms-plugin-spi/: Cargo.toml
crates/whisper-cms-theme-spi/: Cargo.toml
docs/: UML-WhisperCMS-Installation-Activity.puml  architecture.md  changelog.md  design-decisions.md  usage.md  workspace.dsl
docs/arc42/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_context_and_scope.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_crosscutting_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_risks_and_technical_debt.md  12_glossary.md
plugins/whisper-cms-plugin-admin/: Cargo.toml
scripts/: concat_rust.py  generate-sequence-diagrams.py  import_to_project.py  import_to_project.sh  md_to_asciidoc_to_pdf.sh  purge_project_drafts_by_titles.py  purge_project_drafts_by_titles.sh  whispercms_project_backlog.csv
tests/: install_flow.rs
themes/whisper-cms-theme-api/: Cargo.toml
themes/whisper-cms-theme-wisp/: Cargo.toml
