[workspace]
resolver = "2"
members = [
  "crates/edge",
  "crates/adapt",
  "crates/serve",
  "crates/core",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
notify = "8.1.0"
tempfile = "3.3.0"
# leptos = "0.8.12"
leptos_reactive = "0.6.15"
tokio = { version = "1.48.0", features = ["full"] }
rayon = "1.11.0"
walkdir = "2.5"
same-file = "1.0.0"
snafu = "0.8.9"
ractor = { version = "0.15.9", features = ["async-trait"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
mockall = "0.13.1"
sea-query = "0.32.7"
async-trait = "0.1.89"
gray_matter = { version = "0.3.2", default-features = false, features = ["yaml", "toml", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.145"
toml = "0.9.8"
regex = "1.12.2"
