[workspace]
resolver = "2"
members = [
  "crates/edge",
  "crates/adapt",
  "crates/serve",
  "crates/domain",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
notify = "8.1.0"
tempfile = "3.3.0"
# leptos = "0.8.12"
leptos_reactive = "0.6.15"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1.17"
rayon = "1.11.0"
walkdir = "2.5"
same-file = "1.0.0"
thiserror = "2.0.17"
ractor = { version = "0.15.9", features = ["async-trait"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
mockall = "0.13.1"
sea-query = "0.32.7"
async-trait = "0.1.89"
gray_matter = { version = "0.3.2", default-features = false, features = ["yaml", "toml", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.145"
toml = "0.9.8"
regex = "1.12.2"
clap = { version = "4.5.51", features = ["derive", "env"] }
tower = { version = "0.5.2", features = ["limit", "timeout"]}
futures = "0.3.31"
config = "0.15.18"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
handlebars = "6.3.2"
json-patch = "4.1.0"
lol_html = "2.7.0"
boa_engine = "0.21.0"
axum = { version = "0.8.7", features = ["macros"] }
http = "1.3.1"
form_urlencoded = "1.2.2"
html-escape = "0.2.13"
bytes = "1.11.0"
indexed_json = "0.3.2"
chrono = { version = "0.4.42", features = ["serde"] }
smallvec = "1.15.1"
anyhow = "1.0.22"
pingora = { version = "0.6.0", features = ["proxy", "lb", "time", "openssl"] }
pingora-proxy = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
parking_lot = "0.12.5"
tantivy = "0.25.0"
asciidocr = "0.1.12"
comrak = "0.48.0"
orgize = "0.9.0"
rst_parser = "0.4.2"
rst_renderer = "0.4.2"
tokio-util = "0.7.17"
minijinja = "2.12.0"
tera = "1.20.1"
handlebars_misc_helpers = "0.17.0"
