[package]
name = "adapt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
sea-query = { workspace = true }
async-trait = { workspace = true }
gray_matter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
