[package]
name = "adapt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
sea-query = { workspace = true }
async-trait = { workspace = true }
gray_matter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }
regex = { workspace = true }
tower = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
handlebars = { workspace = true }
json-patch = { workspace = true }
lol_html = { workspace = true }
boa_engine = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
form_urlencoded = { workspace = true }
html-escape = { workspace = true }
domain = { path = "../domain" }
serve = { path = "../serve" }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
