
[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
install = []

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
askama_web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-flame = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
url = {workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
secrecy = {workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
time = { workspace = true }

domain = { path = "../domain" }
infra = { path = "../infra" }
actors = { path = "../actors" }
types = { path = "../types" }
