[package]
name = "edge"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
same-file = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexed_json = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
pingora = { workspace = true }
parking_lot = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tantivy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
gray_matter = { workspace = true }
asciidocr = { workspace = true }
comrak = { workspace = true }
orgize = { workspace = true }
rst_parser = { workspace = true }
rst_renderer = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
form_urlencoded = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
tokio-util = { workspace = true }
pingora-openssl = { workspace = true }

domain = { path = "../domain" }
adapt = { path = "../adapt" }
serve = { path = "../serve" }


[[bin]]
name = "whispercms"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
