# crates/operator/Cargo.toml
[package]
name = "operator"
edition = "2021"

[dependencies]
# (same deps you had in setup)
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-flame = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
secrecy = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
which = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rustls-pemfile = { workspace = true }
percent-encoding = { workspace = true }
base64 = { workspace = true }

domain = { path = "../domain" }
infra  = { path = "../infra" }
types  = { path = "../types" }
kit    = { path = "../kit" }
actors = { path = "../actors" }

[[bin]]
name = "whisperctl"           # final binary name
path = "src/main.rs"

[dev-dependencies]
tempfile = {workspace = true}
serde_urlencoded = {workspace = true}