[package]
name = "whispercms-runtime"
edition = "2021"

[lib]
name = "whispercms_runtime"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
# local crates
domain = { path = "../domain" }
infra = { path = "../infra" }
types = { path = "../types" }
kit = { path = "../kit" }
actors = { path = "../actors" }
