[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }
gray_matter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
handlebars = { workspace = true }
json-patch = { workspace = true }
lol_html = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

domain = { path = "../domain" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
