[package]
name = "whisper-cms-core"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
bincode = "2.0.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["from"] }
inquire = "0.7.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
