[package]
name = "whisper-cms-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5.3"
askama = "0.14.0"
async-trait = "0.1.88"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["from"] }
hyper = "1.6.0"
inquire = "0.7.5"
rand = "0.8"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1.0"
mockall = "0.13.1"
